--- a/app/src/main/res/layout/activity_recognize_camera.xml
+++ b/app/src/main/res/layout/activity_recognize_camera.xml
@@ -5,34 +5,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RecognizeCamera">
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#D87F7F">
+
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar_main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:elevation="0dp"
-            app:contentInsetStart="0dp"
-            app:menu="@menu/menusalida">
+            android:elevation="0dp">
+
+            <ImageButton
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_baseline_arrow_back_24"
+                android:background="transparent"
+                android:title="Regresar"
+                android:layout_margin="10dp"
+                android:scaleX="1.5"
+                android:scaleY="1.5"
+                android:layout_alignParentStart="true"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Reconocimiento en tiempo real"
+                android:text="En Tiempo real"
                 android:layout_gravity="center"
                 android:textColor="@color/white"
                 android:textSize="22sp"
                 android:textStyle="bold"/>
 
         </androidx.appcompat.widget.Toolbar>
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageid"
         android:layout_below="@+id/app_bar"/>
 
 </RelativeLayout>
