--- a/app/src/main/res/layout/activity_recognize_gallery.xml
+++ b/app/src/main/res/layout/activity_recognize_gallery.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecognizeCamera">
-
+    tools:context=".RecognizeGallery">
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
@@ -21,8 +20,8 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_baseline_arrow_back_24"
-                android:title="Regresar"
                 android:background="transparent"
+                android:title="Regresar"
                 android:layout_margin="10dp"
                 android:scaleX="1.5"
                 android:scaleY="1.5"
@@ -31,11 +30,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="En Tiempo real"
+                android:text="De Galería"
                 android:layout_gravity="center"
                 android:textColor="@color/white"
                 android:textSize="22sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:id="@+id/txtitulo"/>
             <ImageButton
                 android:layout_width="40dp"
                 android:layout_height="40dp"
@@ -57,5 +57,4 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/app_bar"/>
-
 </RelativeLayout>
