--- a/app/src/main/res/layout/activity_recognize_camera.xml
+++ b/app/src/main/res/layout/activity_recognize_camera.xml
@@ -22,7 +22,7 @@
                 android:layout_height="40dp"
                 android:src="@drawable/ic_baseline_arrow_back_24"
                 android:title="Regresar"
-                android:background="transparent"
+                android:background="#D87F7F"
                 android:layout_margin="10dp"
                 android:scaleX="1.5"
                 android:scaleY="1.5"
@@ -38,9 +38,9 @@
                 android:textStyle="bold"/>
             <ImageButton
                 android:layout_width="40dp"
+                android:background="#D87F7F"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_baseline_refresh_24"
-                android:background="transparent"
                 android:title="Refrescar"
                 android:layout_gravity="right"
                 android:layout_margin="10dp"
