--- a/app/src/main/res/layout/activity_recognize_gallery.xml
+++ b/app/src/main/res/layout/activity_recognize_gallery.xml
@@ -20,12 +20,12 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_baseline_arrow_back_24"
-                android:background="transparent"
                 android:title="Regresar"
                 android:layout_margin="10dp"
                 android:scaleX="1.5"
                 android:scaleY="1.5"
-                android:layout_alignParentStart="true"/>
+                android:background="#D87F7F"
+            android:layout_alignParentStart="true"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -40,9 +40,10 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_baseline_refresh_24"
-                android:background="transparent"
                 android:title="Refrescar"
-                android:layout_gravity="right"
+                android:background="#D87F7F"
+
+            android:layout_gravity="right"
                 android:layout_margin="10dp"
                 android:scaleX="1.5"
                 android:scaleY="1.5"
@@ -54,7 +55,8 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/app_bar"/>
+        android:id="@+id/ivphoto"
+        android:layout_width="match_parent"
+        android:layout_height="416dp"
+        android:layout_below="@+id/app_bar" />
 </RelativeLayout>
