--- a/app/src/main/res/layout/activity_recognize_camera.xml
+++ b/app/src/main/res/layout/activity_recognize_camera.xml
@@ -42,8 +42,25 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="412dp"
+        android:layout_height="526dp"
+        android:layout_below="@+id/app_bar"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="-2dp"
+        android:id="@+id/Image"/>
+
+    <TextView
+        android:id="@+id/txtdisplay"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/app_bar"/>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/Image"
+        android:textSize="32dp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:text="Texto detectado" />
 
 </RelativeLayout>
