--- a/app/src/main/res/layout/activity_recognize_gallery.xml
+++ b/app/src/main/res/layout/activity_recognize_gallery.xml
@@ -57,6 +57,17 @@
     <ImageView
         android:id="@+id/ivphoto"
         android:layout_width="match_parent"
-        android:layout_height="416dp"
+        android:layout_height="512dp"
         android:layout_below="@+id/app_bar" />
+    <TextView
+        android:id="@+id/txtdisplay"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/ivphoto"
+        android:textSize="32dp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:text="Texto detectado" />
 </RelativeLayout>
